agregue link de area

--- a/jobs/templates/empleos.html
+++ b/jobs/templates/empleos.html
@@ -13,7 +13,7 @@
 <ul>
 	<li>Empresa: {{job.usuario}}</li>
 	<li>Empleo:{{job.empleo}}</li>
-	<li>Area: <a class="link-area" href="{{job.area}}">{{job.area}}</a> </li>
+	<li>Area: <a class="link-area" href="/area/{{job.area}}">{{job.area}}</a> </li>
 	<li>Descripcion:{{job.descripcion}}</li>
 	<li>Direccion: {{job.direccion}}</li>
 	<li>Estado: {{job.estado}}</li>
