--- a/jobs/templates/empleos.html
+++ b/jobs/templates/empleos.html
@@ -11,7 +11,7 @@
 {% for job in jobs %}
 <section class="empleo" >
 <ul>
-	<li>Empresa: {{job.usuario}}</li>
+	<li>Empresa: <a class="link-area" href="/empresa/{{job.usuario}}">{{job.usuario}}</a> </li>
 	<li>Empleo:{{job.empleo}}</li>
 	<li>Area: <a class="link-area" href="/area/{{job.area}}">{{job.area}}</a> </li>
 	<li>Descripcion:{{job.descripcion}}</li>
