--- a/jobs/templates/empleos.html
+++ b/jobs/templates/empleos.html
@@ -6,7 +6,7 @@
 	<title>Humand Development</title>
 </head>
 <body>
-<h1 class="center primary-color" >Human Development </h1>
+<h1 class="center primary-color" ><a class="link-area" href="/">Human Development</a> </h1>
 
 {% for job in jobs %}
 <section class="empleo" >
