--- a/jobs/templates/form.html
+++ b/jobs/templates/form.html
@@ -6,7 +6,7 @@
 	
 
 	<!-- form -->
-<form enctype="multipart/form-data" method="post">
+<form action="" enctype="multipart/form-data" method="post">
 	<div id="form">
 		{% csrf_token %}
 		{{form.as_p}}
