--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 	<section>
-		<h1>Login</h1>
+		<h1>Login please</h1>
 		<p>
 			<a href="{% url 'social:begin' 'twitter' %}" class="btn btn-info btn-lg" role="button">Twitter</a>
 			<a href="{% url 'social:begin' 'facebook' %}" class="btn btn-primary btn-lg" role="button">Facebook</a>
