--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-	<h1>Welcome {{username}}!</h1>
+	<h1>Welcome {{username}} {{email}} !</h1>
 
 <a class="font-medium" href="/add">Please, Post a Job!</a>
 </div>
