--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -4,7 +4,8 @@
 	<h1>Welcome {{username}} {{email}} !</h1>
 
 
-<img src="graph.facebook.com/{facebook_id}/picture?type=large" alt="">
+<img src="graph.facebook.com/{{facebook_id}}/picture?type=large" alt="">
+<img src="graph.facebook.com/{{id}}/picture?type=large" alt="">
 
 
 <a class="font-medium" href="/add">Please, Post a Job!</a>
