--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -4,8 +4,12 @@
 	<h1>Welcome {{username}} {{email}} !</h1>
 
 
-<img src="graph.facebook.com/{{facebook_id}}/picture?type=large" alt="">
-<img src="graph.facebook.com/{{id}}/picture?type=large" alt="">
+<img src="http://graph.facebook.com/{{facebook_id}}/picture?type=large" alt="">
+<img src="http://graph.facebook.com/{{id}}/picture?type=large" alt="">
+<img src="http://graph.facebook.com/{{id}}/picture?type=large" alt="">
+<img src="http://graph.facebook.com/%s/picture?type=large" % response['id'] alt="">
+
+"http://graph.facebook.com/%s/picture?type=large" % response['id']
 
 
 <a class="font-medium" href="/add">Please, Post a Job!</a>
