--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -10,6 +10,8 @@
 <img src="http://graph.facebook.com/{id}/picture?type=large" alt="">
 <img src="http://graph.facebook.com/%s/picture?type=large" "% response['id']" alt="">
 <img src="http://graph.facebook.com/%s/picture?type=large % response['id']" alt="">
+<img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt="">
+
 
 
 
