--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -6,13 +6,14 @@
 	<p>email: {{user.email}}</p>
 	<p>first name: {{user.first_name}}</p>
 	<p>last name: {{user.last_name}}</p>
-	<p>last name: {{user.uid}}</p>
+	<p>last id: {{user.uid}}</p>
+	<p>last id: {{user.id}}</p>
 	
 
 <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt="">
 
 
-% response['id']
+
 
 
 
