--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -10,6 +10,7 @@
 	<p>last id: {{user.id}}</p>
 	<p>last id: {{user.U_id}}</p>
 	<p>last id: {{user.Uid}}</p>
+	{{photo}}
 	
 
 <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt="">
