--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -12,8 +12,7 @@
 	<p>last id: {{user.Uid}}</p>
 	{{photo}}
 	
-
-<img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt="">
+<!-- <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt=""> -->
 
 
 
