--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,14 +3,17 @@
 {% block content %}
 	<h1>Welcome {{username}} !</h1>
 
-	<p>email: {{user.email}}</p>
-	<p>first name: {{user.first_name}}</p>
-	<p>last name: {{user.last_name}}</p>
-	<p>last id: {{user.uid}}</p>
-	<p>last id: {{user.id}}</p>
-	<p>last id: {{user.U_id}}</p>
-	<p>last id: {{user.Uid}}</p>
-	{{photo}}
+	<p>  {{email}}</p>
+	<p>  {{first_name}} </p>
+	<p>  {{last_name}}</p>
+	<p>  {{uid}}</p>
+	<p>  {{id}}</p>
+	<p>  {{U_id}}</p>
+	<p>  {{Uid}}</p>
+	<p>  {{link}}</p>
+	<p>  {{gender}}</p>
+	<p>  {{locale}}</p>
+	
 	
 <!-- <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt=""> -->
 
@@ -18,7 +21,7 @@
 
 
 
-
+<br>
 
 <a class="font-medium" href="/add">Please, Post a Job!</a>
 </div>
