--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,16 +3,16 @@
 {% block content %}
 	<h1>Welcome {{username}} !</h1>
 
-	<p>  {{email}}</p>
-	<p>  {{first_name}} </p>
-	<p>  {{last_name}}</p>
-	<p>  {{uid}}</p>
-	<p>  {{id}}</p>
-	<p>  {{U_id}}</p>
-	<p>  {{Uid}}</p>
-	<p>  {{link}}</p>
-	<p>  {{gender}}</p>
-	<p>  {{locale}}</p>
+	<p>  {{user.email}}</p>
+	<p>  {{user.first_name}} </p>
+	<p>  {{user.last_name}}</p>
+	<p>  {{user.uid}}</p>
+	<p>  {{user.id}}</p>
+	<p>  {{user.U_id}}</p>
+	<p>  {{user.Uid}}</p>
+	<p>  {{user.link}}</p>
+	<p>  {{user.gender}}</p>
+	<p>  {{user.locale}}</p>
 	
 	
 <!-- <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt=""> -->
