--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,6 +13,9 @@
 	<p>  {{user.link}}</p>
 	<p>  {{user.gender}}</p>
 	<p>  {{user.locale}}</p>
+	<p>  {{user-user-id}}</p>
+	<p>  {{ user-id}}</p>
+	<p>  { user-id}</p>
 	
 	
 <!-- <img src="http://graph.facebook.com/10154512780255599/picture?type=large" alt=""> -->
