--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,7 +13,7 @@
 	<p>  {{user.link}}</p>
 	<p>  {{user.gender}}</p>
 	<p>  {{user.locale}}</p>
-	<p>  {{user-user-id}}</p>
+	<p>  {{ user.user-id}}</p>
 	<p>  {{ user-id}}</p>
 	<p>  { user-id}</p>
 	
