--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -13,8 +13,8 @@
 	<p>  {{user.link}}</p>
 	<p>  {{user.gender}}</p>
 	<p>  {{user.locale}}</p>
-	<p>  {{ user.user-id}}</p>
-	<p>  {{ user-id}}</p>
+	<p>  {{ user.user_id}}</p>
+	<p>  {{ user_id}}</p>
 	<p>  { user-id}</p>
 	
 	
