--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,10 +3,10 @@
 {% block content %}
 	<h1>Welcome {{username}} !</h1>
 
-	<p>  {{user.email}}</p>
-	<p>  {{user.first_name}} </p>
-	<p>  {{user.last_name}}</p>
-	<p>  {{user.uid}}</p>
+	<p> @: {{user.email}}</p>
+	<p> Primer Nombre {{user.first_name}} </p>
+	<p> Apellido  {{user.last_name}}</p>
+	<p>   {{user.uid}}</p>
 	<p>  {{user.id}}</p>
 	<p>  {{user.U_id}}</p>
 	<p>  {{user.Uid}}</p>
