--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -3,19 +3,10 @@
 {% block content %}
 	<h1>Welcome {{username}} !</h1>
 
-	<p> @: {{user.email}}</p>
-	<p> Primer Nombre {{user.first_name}} </p>
+	<p> Primer Nombre: {{user.first_name}} </p>
 	<p> Apellido  {{user.last_name}}</p>
-	<p>   {{user.uid}}</p>
-	<p>  {{user.id}}</p>
-	<p>  {{user.U_id}}</p>
-	<p>  {{user.Uid}}</p>
-	<p>  {{user.link}}</p>
-	<p>  {{user.gender}}</p>
-	<p>  {{user.locale}}</p>
-	<p>  {{ user.user_id}}</p>
-	<p>  {{ user_id}}</p>
-	<p>  { user-id}</p>
+	<p> Email: {{user.email}}</p>
+	
 	
 	{% if user.facebook_id %}
 	<img src="http://graph.facebook.com/{{ user.facebook_id }}/picture?type=large" alt="">
