--- a/jobs/templates/timeline.html
+++ b/jobs/templates/timeline.html
@@ -40,7 +40,7 @@
 	
 	
 	{% if user.facebook_id %}
-	<img src="http://graph.facebook.com/{{ user.facebook_id }}/picture?type=large" alt="">
+	<img src="http://graph.facebook.com/{{ user.facebook_id }}/picture?type=small" alt="">
 	{% endif %}
 
 
