--- a/jobs/templates/timeline.html
+++ b/jobs/templates/timeline.html
@@ -32,7 +32,7 @@
 
 </header>
 
-	<h1>Welcome {{username}} !</h1>
+	<h1>Welcome {{user.username}} !</h1>
 
 	<p> Primer Nombre: {{user.first_name}} </p>
 	<p> Apellido  {{user.last_name}}</p>
